[EDIT]Kata 4. Se completa exitosamente la Kata 4.